base/typesense/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: typesense
  name: typesense
  namespace: 5stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: typesense
  template:
    metadata:
      labels:
        app: typesense
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: 5stack-typesense
                operator: In
                values:
                  - "true"
      containers:
        - name: typesense
          image: typesense/typesense:30.2
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 8108
          startupProbe:
            httpGet:
              path: /health
              port: 8108
            periodSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /health
              port: 8108
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 2
          livenessProbe:
            httpGet:
              path: /health
              port: 8108
            initialDelaySeconds: 15
            periodSeconds: 15
            failureThreshold: 3
          volumeMounts:
            - name: typesense-config
              mountPath: /etc/typesense
            - name: typesense-data
              mountPath: /data
          command:
            - /opt/typesense-server
            - --enable-cors
            - --cors-domains=http://localhost,https://$(TYPESENSE_HOST)
        - name: typesense-web
          image: ghcr.io/bfritscher/typesense-dashboard:2.5.0
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /srv/config.json
              name: web-config
              subPath: config.json
      volumes:
        - name: web-config
          configMap:
            name: typesense-web-config
        - name: typesense-config
          configMap:
            name: typesense-config
        - name: typesense-data
          persistentVolumeClaim:
            claimName: typesense-pvc
